--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="iso-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Juan Shift">
     <meta name="description" content="Ejercicio acamica">
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <script	src="https://platform.illow.io/banner.js?siteId=68c88db0-3b38-488a-9ae7-6990d0d19662" lang="pt"></script>
 </head>
 <body>
     <header><div class="encabezado"><h1>EMINƎM</h1></div>
