--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-    <script	src="https://platform.illow.io/banner.js?siteId=68c88db0-3b38-488a-9ae7-6990d0d19662" lang="pt"></script>
 </head>
 <body>
-    <header><div class="encabezado"><h1>EMINƎM</h1></div>
+    <header> <script	src="https://platform.illow.io/banner.js?siteId=68c88db0-3b38-488a-9ae7-6990d0d19662" lang="pt"></script><div class="encabezado"><h1>EMINƎM</h1></div>
         <div class="navegacion">
             <nav>
                     <a class="nav" href="#descripcion">Descripción</a>
